[gd_scene load_steps=23 format=2]

[ext_resource path="res://Genius.gd" type="Script" id=1]
[ext_resource path="res://Sequencia/Sequencia.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/background.png" type="Texture" id=3]
[ext_resource path="res://Botoes/BotaoCor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/blue-button.png" type="Texture" id=5]
[ext_resource path="res://Art/blue_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://Art/red-button.png" type="Texture" id=7]
[ext_resource path="res://Art/red_sound.wav" type="AudioStream" id=8]
[ext_resource path="res://Art/yellow-button.png" type="Texture" id=9]
[ext_resource path="res://Art/yellow_sound.wav" type="AudioStream" id=10]
[ext_resource path="res://Art/green-button.png" type="Texture" id=11]
[ext_resource path="res://Art/green_sound.wav" type="AudioStream" id=12]
[ext_resource path="res://Botoes/BotaoStart.tscn" type="PackedScene" id=13]
[ext_resource path="res://Art/center_sond.wav" type="AudioStream" id=14]
[ext_resource path="res://Pontos/Pontos.tscn" type="PackedScene" id=15]
[ext_resource path="res://TelaDerrota/TelaDerrota.tscn" type="PackedScene" id=16]
[ext_resource path="res://TelaHighScores/TelaHighScores.tscn" type="PackedScene" id=17]
[ext_resource path="res://Botoes/BotaoMostrarHighScores.tscn" type="PackedScene" id=18]
[ext_resource path="res://Botoes/BotaoDesliga.tscn" type="PackedScene" id=19]
[ext_resource path="res://Botoes/Volume.tscn" type="PackedScene" id=20]
[ext_resource path="res://Botoes/BotaoConfig.tscn" type="PackedScene" id=21]
[ext_resource path="res://TelaConfig/TelaConfig.tscn" type="PackedScene" id=22]

[node name="Genius" type="Node" index="0"]

script = ExtResource( 1 )
tempo_espera = 1.5

[node name="Sequencia" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true

[node name="Background" type="Sprite" parent="." index="1"]

position = Vector2( 540, 960 )
scale = Vector2( 30, 1 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="BotaoAzul" parent="." index="2" instance=ExtResource( 4 )]

editor/display_folded = true

[node name="Sprite" parent="BotaoAzul" index="0"]

texture = ExtResource( 5 )

[node name="Light2D" parent="BotaoAzul" index="1"]

position = Vector2( 800, 1250 )

[node name="Area2D" parent="BotaoAzul" index="2"]

editor/display_folded = false

[node name="CollisionPolygon2D" parent="BotaoAzul/Area2D" index="0"]

position = Vector2( 410, 830 )
polygon = PoolVector2Array( 250, 160, 630, 160, 580, 380, 380, 580, 160, 630, 160, 250 )

[node name="AudioStreamPlayer" parent="BotaoAzul" index="4"]

stream = ExtResource( 6 )

[node name="BotaoVermelho" parent="." index="3" instance=ExtResource( 4 )]

editor/display_folded = true

[node name="Sprite" parent="BotaoVermelho" index="0"]

texture = ExtResource( 7 )

[node name="Light2D" parent="BotaoVermelho" index="1"]

position = Vector2( 360, 1260 )

[node name="Area2D" parent="BotaoVermelho" index="2"]

editor/display_folded = false

[node name="CollisionPolygon2D" parent="BotaoVermelho/Area2D" index="0"]

polygon = PoolVector2Array( 723, 1312, 813, 1402, 813, 1782, 593, 1732, 393, 1532, 343, 1312 )

[node name="AudioStreamPlayer" parent="BotaoVermelho" index="4"]

stream = ExtResource( 8 )

[node name="BotaoAmarelo" parent="." index="4" instance=ExtResource( 4 )]

editor/display_folded = true

[node name="Sprite" parent="BotaoAmarelo" index="0"]

texture = ExtResource( 9 )

[node name="Light2D" parent="BotaoAmarelo" index="1"]

position = Vector2( 800, 820 )
energy = 1.4

[node name="Area2D" parent="BotaoAmarelo" index="2"]

editor/display_folded = false

[node name="CollisionPolygon2D" parent="BotaoAmarelo/Area2D" index="0"]

position = Vector2( 450, 410 )
polygon = PoolVector2Array( 120, 50, 350, 100, 550, 320, 590, 520, 210, 520, 120, 430 )

[node name="AudioStreamPlayer" parent="BotaoAmarelo" index="4"]

stream = ExtResource( 10 )

[node name="BotaoVerde" parent="." index="5" instance=ExtResource( 4 )]

editor/display_folded = true

[node name="Sprite" parent="BotaoVerde" index="0"]

texture = ExtResource( 11 )

[node name="Light2D" parent="BotaoVerde" index="1"]

position = Vector2( 380, 830 )

[node name="Area2D" parent="BotaoVerde" index="2"]

editor/display_folded = false

[node name="CollisionPolygon2D" parent="BotaoVerde/Area2D" index="0"]

position = Vector2( 40, 420 )
polygon = PoolVector2Array( 50, 290, 260, 80, 470, 40, 470, 420, 380, 510, 0, 510 )

[node name="AudioStreamPlayer" parent="BotaoVerde" index="4"]

stream = ExtResource( 12 )

[node name="BotaoStart" parent="." index="6" instance=ExtResource( 13 )]

editor/display_folded = true

[node name="AudioStreamPlayer" parent="BotaoStart" index="4"]

stream = ExtResource( 14 )

[node name="Pontos" parent="." index="7" instance=ExtResource( 15 )]

[node name="TelaDerrota" parent="." index="8" instance=ExtResource( 16 )]

editor/display_folded = true
visible = false

[node name="TelaHighScores" parent="." index="9" instance=ExtResource( 17 )]

editor/display_folded = true

[node name="BotaoMostrarHighScores" parent="." index="10" instance=ExtResource( 18 )]

editor/display_folded = true

[node name="BotaoDesliga" parent="." index="11" instance=ExtResource( 19 )]

[node name="Volume" parent="." index="12" instance=ExtResource( 20 )]

[node name="BotaoConfig" parent="." index="13" instance=ExtResource( 21 )]

[node name="TelaConfig" parent="." index="14" instance=ExtResource( 22 )]

editor/display_folded = true

[node name="Fundo" parent="TelaConfig" index="0"]

visible = false

[connection signal="timeout" from="Sequencia/TempoApertarBotao" to="." method="derrota"]

[connection signal="botaoPressionado" from="BotaoAzul" to="." method="botaoAzulPressionado"]

[connection signal="botaoPressionado" from="BotaoVermelho" to="." method="botaoVermelhoPressionado"]

[connection signal="botaoPressionado" from="BotaoAmarelo" to="." method="botaoAmareloPressionado"]

[connection signal="botaoPressionado" from="BotaoVerde" to="." method="botaoVerdePressionado"]

[connection signal="botaoPressionado" from="BotaoStart" to="." method="comecaJogo"]

[connection signal="botaoPressionado" from="TelaDerrota/BotaoRecomecar" to="." method="RecomecarJogo"]

[connection signal="botaoPressionado" from="TelaHighScores/BotaoVoltar" to="BotaoMostrarHighScores" method="ativaBotao"]

[connection signal="botaoPressionado" from="TelaHighScores/BotaoVoltar" to="BotaoMostrarHighScores" method="mostraBotao"]

[connection signal="botaoPressionado" from="BotaoMostrarHighScores" to="." method="pause"]

[connection signal="botaoPressionado" from="BotaoMostrarHighScores" to="TelaHighScores" method="mostrar"]

[connection signal="botaoPressionado" from="BotaoConfig" to="TelaConfig" method="mostrar"]


[editable path="Sequencia"]
[editable path="BotaoAzul"]
[editable path="BotaoVermelho"]
[editable path="BotaoAmarelo"]
[editable path="BotaoVerde"]
[editable path="BotaoStart"]
[editable path="TelaDerrota"]
[editable path="TelaHighScores"]
[editable path="BotaoMostrarHighScores"]
[editable path="TelaConfig"]
